--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,11 +3,20 @@ name = "flexexecutor"
 description = "Executors that automatically increases or decreases the number of workers"
 authors = [{ name = "leavers", email = "leavers930@gmail.com" }]
 dependencies = []
-requires-python = ">=3.8"
+requires-python = ">=3.8.1"
 readme = "README.md"
 license = { text = "MIT" }
 dynamic = ["version"]
 
+[project.optional-dependencies]
+pylsp = [
+    "python-lsp-server[all]>=1.7.4",
+    "pylsp-mypy>=0.6.7",
+    "pylsp-rope>=0.1.11",
+    "python-lsp-ruff>=1.5.1",
+    "pyls-isort>=0.2.2",
+    "python-lsp-black>=1.3.0",
+]
 [build-system]
 requires = ["pdm-backend"]
 build-backend = "pdm.backend"
@@ -21,31 +30,27 @@ remove-duplicate-keys = true
 remove-unused-variables = true
 
 [tool.black]
+include-trailing-comma = true
 line-length = 88
 target-version = ["py38", "py39", "py310", "py311"]
 
 [tool.coverage.run]
 branch = true
-source = ["src"]
+source = ["flexexecutor.py"]
 parallel = true
 
 [tool.coverage.report]
 show_missing = true
 exclude_lines = ["pragma: nocover"]
 
-[tool.flake8]
-# extend-ignore = ["E203"]
-max-line-length = 88
-# better to use whitelist: "exclude" makes flake8 process a huge amount of files
-# exclude = [".git", "__pycache__", "build", "dist"]
-
 [tool.ruff]
-# ignore = ["E203"]
+select = ["E", "F", "I"]
+ignore = ["E203"]
 line-length = 88
 
 [tool.isort]
 profile = "black"
-src_paths = ["src", "tests", "noxfile.py"]
+src_paths = ["flexexecutor.py", "tests", "noxfile.py"]
 
 [tool.mypy]
 check_untyped_defs = true
@@ -56,18 +61,15 @@ warn_unused_configs = true
 # use comment "type: ignore" to ignore single line
 # use comment "type: ignore[error-code] to ignore single error"
 
-[tool.pyright]
-extraPaths = ["__pypackages__/3.8/lib/"]
-
 [tool.pytest.ini_options]
 asyncio_mode = "strict"
 
 [tool.pdm.version]
 source = "file"
-path = "src/flexexecutor.py"
+path = "flexexecutor.py"
 
 [tool.pdm.build]
-package-dir = "src"
+includes = ["flexexecutor.py"]
 
 [tool.pdm.dev-dependencies]
 dev = [
@@ -75,10 +77,10 @@ dev = [
   "black>=23.7.0",
   "isort>=5.12.0",
   "mypy>=1.4.1",
-  "pyproject-flake8>=5.0.4.post1",
   "nox>=2023.4.22",
   "pytest>=7.4.0",
   "pytest-asyncio>=0.21.1",
   "pytest-cov>=4.1.0",
   "pytest-timeout>=2.1.0",
+  "ruff>=0.0.286",
 ]
