--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,25 +1,62 @@
 [project]
 name = "flexexecutor"
-description = "Executors that automatically increases or decreases the number of workers"
-authors = [{ name = "leavers", email = "leavers930@gmail.com" }]
-dependencies = []
-requires-python = ">=3.8.1"
+description = "Executors that automatically scales the number of workers"
+authors = [{ name = "leavers" }]
+classifiers = [
+  "Intended Audience :: Developers",
+  "License :: OSI Approved :: MIT License",
+  "Operating System :: OS Independent",
+  "Programming Language :: Python",
+  "Programming Language :: Python :: 3",
+  "Programming Language :: Python :: 3.8",
+  "Programming Language :: Python :: 3.9",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
+  "Topic :: Scientific/Engineering",
+  "Topic :: Software Development",
+  "Topic :: Software Development :: Libraries :: Python Modules",
+  "Topic :: Utilities",
+]
+requires-python = ">=3.8"
 readme = "README.md"
 license = { text = "MIT" }
+dependencies = []
 dynamic = ["version"]
 
+[project.urls]
+homepage = "https://github.com/leavers/flexexecutor"
+# documentation = "URL of documentation"
+# changelog = "URL of changelog"
+
 [project.optional-dependencies]
-pylsp = [
-    "python-lsp-server[all]>=1.7.4",
-    "pylsp-mypy>=0.6.7",
-    "pylsp-rope>=0.1.11",
-    "python-lsp-ruff>=1.5.1",
-    "pyls-isort>=0.2.2",
-    "python-lsp-black>=1.3.0",
+dev = [
+  "autoflake",
+  "bumpver",
+  "isort",
+  "mypy",
+  "nox",
+  "pytest",
+  "pytest-asyncio",
+  "pytest-cov",
+  "pytest-timeout",
+  "ruff",
 ]
+pylsp = [
+  "python-lsp-server[all]",
+  "pylsp-mypy",
+  "pylsp-rope",
+  "python-lsp-ruff",
+  "pyls-isort",
+  "python-lsp-black",
+]
+
 [build-system]
-requires = ["pdm-backend"]
-build-backend = "pdm.backend"
+requires = ["setuptools >= 65.0.0", "setuptools-scm"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools.dynamic]
+version = { attr = "flexexecutor.__version__" }
 
 [tool.autoflake]
 in-place = true
@@ -29,10 +66,28 @@ ignore-init-module-imports = true
 remove-duplicate-keys = true
 remove-unused-variables = true
 
-[tool.black]
-include-trailing-comma = true
-line-length = 88
-target-version = ["py38", "py39", "py310", "py311"]
+[tool.bumpver]
+# $ bumpver test '1.2.3' 'MAJOR.MINOR.PATCH[PYTAGNUM]' --major
+# New Version: 2.0.0
+# $ bumpver test '1.2.3' 'MAJOR.MINOR.PATCH[PYTAGNUM]' --minor
+# New Version: 1.3.0
+# $ bumpver test '1.2.3' 'MAJOR.MINOR.PATCH[PYTAGNUM]' --patch
+# New Version: 1.2.4
+# $ bumpver test '1.2.3' 'MAJOR.MINOR.PATCH[PYTAGNUM]' --patch --tag=beta
+# New Version: 1.2.4b0
+# $ bumpver test '1.2.4b0' 'MAJOR.MINOR.PATCH[PYTAGNUM]' --tag-num
+# New Version: 1.2.4b1
+current_version = "0.0.1"
+version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
+commit_message = "build: bump version {old_version} -> {new_version}"
+commit = true
+tag = false
+push = false
+
+[tool.bumpver.file_patterns]
+# use "bumpver update --major | minor | patch | tag=alpha|beta --dry" to test
+# "pyproject.toml" = ['version = "{version}"']
+"flexexecutor.py" = ['__version__ = "{version}"']
 
 [tool.coverage.run]
 branch = true
@@ -63,24 +118,3 @@ warn_unused_configs = true
 
 [tool.pytest.ini_options]
 asyncio_mode = "strict"
-
-[tool.pdm.version]
-source = "file"
-path = "flexexecutor.py"
-
-[tool.pdm.build]
-includes = ["flexexecutor.py"]
-
-[tool.pdm.dev-dependencies]
-dev = [
-  "autoflake>=1.7.8",
-  "black>=23.7.0",
-  "isort>=5.12.0",
-  "mypy>=1.4.1",
-  "nox>=2023.4.22",
-  "pytest>=7.4.0",
-  "pytest-asyncio>=0.21.1",
-  "pytest-cov>=4.1.0",
-  "pytest-timeout>=2.1.0",
-  "ruff>=0.0.286",
-]
