--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,26 +5,34 @@ on:
     tags:
       - "*"
 
-steps:
-  - uses: actions/checkout@v4
-  - uses: actions/setup-python@v5
-    with:
-      python-version: "3.8"
-  - name: "Install dependencies"
-    run: |
-      python -m pip install --upgrade pip
-      python -m pip install nox
-      python --version
-      pip --version
-      nox --version
-  - name: "Build wheel and publish to PyPI"
-    env:
-      TWINE_USERNAME: __token__
-      TWINE_PASSWORD: ${{ secrets.pypi_token }}
-    run: |
-      nox -s publish
-  - name: Upload wheels to release
-    uses: AButler/upload-release-assets@v3.0
-    with:
-      repo-token: ${{ secrets.GITHUB_TOKEN }}
-      files: "dist/*"
+jobs:
+  publish:
+    name: "Publish release"
+    runs-on: "ubuntu-latest"
+
+    environment:
+      name: deploy
+
+  steps:
+    - uses: actions/checkout@v4
+    - uses: actions/setup-python@v5
+      with:
+        python-version: "3.8"
+    - name: "Install dependencies"
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install nox
+        python --version
+        pip --version
+        nox --version
+    - name: "Build wheel and publish to PyPI"
+      env:
+        TWINE_USERNAME: __token__
+        TWINE_PASSWORD: ${{ secrets.pypi_token }}
+      run: |
+        nox -s publish
+    - name: Upload wheels to Github release
+      uses: AButler/upload-release-assets@v3.0
+      with:
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
+        files: "dist/*"
