--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,8 +7,8 @@ on:
       - "[0-9]+.[0-9]+.[0-9]+"
 
   # Run when a release has been created
-  release:
-    types: [created]
+  # release:
+  #   types: [created]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
