--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -39,18 +39,8 @@ jobs:
           TWINE_PASSWORD: ${{ secrets.pypi_token }}
         run: |
           nox -s publish
-      - name: Echo ref_name
-        run: |
-          echo ${{ github.ref_name }}
-      - name: Create GitHub release
-        uses: elgohr/Github-Release-Action@v5
-        env:
-          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+      - name: Create Github release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
         with:
-          title: ${{ github.ref_name }}
-      - name: Upload wheels to Github release
-        uses: AButler/upload-release-assets@v3.0
-        with:
-          release-tag: ${{ github.ref_name }}
-          repo-token: ${{ secrets.RELEASE_TOKEN }}
-          files: "dist/*"
+          files: dist/*
