--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -44,4 +44,4 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: dist/*
-          token: ${{ secret.release_token }}
+          token: ${{ secrets.release_token }}
