ci: fix deps missing in test-suite

--- a/.github/workflows/test-suite.yml
+++ b/.github/workflows/test-suite.yml
@@ -37,4 +37,4 @@ jobs:
         if: "${{ matrix.os == 'ubuntu-latest' && matrix.python-version == '3.8' }}"
       - name: "Run tests"
         run: |
-          nox -s test
+          nox -s test_for_ci
