--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [project]
 name = "flexexecutor"
-description = """
-Executors for both async and sync functions \
-and automatically scales the number of workers
-"""
-authors = [{ name = "leavers" }]
+description = "Executors for both async and sync functions and automatically scales the number of workers"
+authors = [
+  { name = "leavers" },
+  { name = "Leavers", email = "leavers930@gmail.com" },
+]
 classifiers = [
   "Intended Audience :: Developers",
   "License :: OSI Approved :: MIT License",
@@ -31,37 +31,35 @@ homepage = "https://github.com/leavers/flexexecutor"
 documentation = "https://github.com/leavers/flexexecutor/blob/main/README.md"
 # changelog = "URL of changelog"
 
-[project.optional-dependencies]
-dev = [
-  "autoflake",
-  "bumpver",
-  "coverage[toml]",
-  "mypy",
-  "nox",
-  "pytest",
-  "pytest-asyncio",
-  "pytest-cov",
-  "pytest-mock",
-  "pytest-timeout",
-  "ruff",
-]
-pylsp = [
-  "python-lsp-server[all]",
-  "pylsp-mypy",
-  "pylsp-rope",
-  "python-lsp-ruff",
-  "python-lsp-black",
-]
-
 [build-system]
-requires = ["setuptools >= 69.0.3", "setuptools-scm"]
-build-backend = "setuptools.build_meta"
+requires = ["pdm-backend"]
+build-backend = "pdm.backend"
 
-[tool.setuptools.dynamic]
-version = { attr = "flexexecutor.__version__" }
+[tool.pdm]
+distribution = true
 
-[tool.setuptools]
-py-modules = ["flexexecutor"]
+[tool.pdm.build]
+includes = ["flexexecutor.py"]
+excludes = ["tests"]
+
+[tool.pdm.version]
+source = "file"
+path = "flexexecutor.py"
+
+[tool.pdm.dev-dependencies]
+dev = [
+  "autoflake>=2.3.1",
+  "coverage[toml]>=7.6.1",
+  "mypy>=1.11.1",
+  "nox>=2024.4.15",
+  "pytest>=8.3.2",
+  "pytest-asyncio>=0.23.8",
+  "pytest-cov>=5.0.0",
+  "pytest-mock>=3.14.0",
+  "pytest-timeout>=2.3.1",
+  "ruoml>=0.11.0",
+  "ruff>=0.6.1",
+]
 
 [tool.autoflake]
 in-place = true
@@ -70,29 +68,6 @@ remove-all-unused-imports = true
 ignore-init-module-imports = true
 remove-duplicate-keys = true
 remove-unused-variables = true
-
-[tool.bumpver]
-# $ bumpver test '1.2.3' 'MAJOR.MINOR.PATCH[PYTAGNUM]' --major
-# New Version: 2.0.0
-# $ bumpver test '1.2.3' 'MAJOR.MINOR.PATCH[PYTAGNUM]' --minor
-# New Version: 1.3.0
-# $ bumpver test '1.2.3' 'MAJOR.MINOR.PATCH[PYTAGNUM]' --patch
-# New Version: 1.2.4
-# $ bumpver test '1.2.3' 'MAJOR.MINOR.PATCH[PYTAGNUM]' --patch --tag=beta
-# New Version: 1.2.4b0
-# $ bumpver test '1.2.4b0' 'MAJOR.MINOR.PATCH[PYTAGNUM]' --tag-num
-# New Version: 1.2.4b1
-current_version = "0.0.9"
-version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
-commit_message = "build: bump version {old_version} -> {new_version}"
-commit = true
-tag = false
-push = false
-
-[tool.bumpver.file_patterns]
-# use "bumpver update --major | minor | patch | tag=alpha|beta --dry" to test
-# "pyproject.toml" = ['version = "{version}"']
-"flexexecutor.py" = ['__version__ = "{version}"']
 
 [tool.coverage.run]
 branch = true
@@ -107,8 +82,6 @@ show_missing = true
 exclude_lines = ["pragma: no cover"]
 
 [tool.ruff]
-select = ["E", "F", "I"]
-ignore = ["E203"]
 line-length = 88
 
 [tool.mypy]
@@ -117,8 +90,6 @@ follow_imports = "error"
 ignore_missing_imports = true
 show_error_codes = true
 warn_unused_configs = true
-# use comment "type: ignore" to ignore single line
-# use comment "type: ignore[error-code] to ignore single error"
 
 [tool.pytest.ini_options]
 asyncio_mode = "strict"
