--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,34 +14,23 @@ on:
   workflow_dispatch:
 
 jobs:
-  publish:
-    name: "Publish release"
-    runs-on: "ubuntu-latest"
-
-    environment:
-      name: deploy
-
+  pypi-publish:
+    name: upload release to PyPI
+    runs-on: ubuntu-latest
+    # Specifying a GitHub environment is optional, but strongly encouraged
+    environment: release
+    permissions:
+      # This permission is needed for private repositories.
+      # contents: read
+      # IMPORTANT: this permission is mandatory for trusted publishing
+      id-token: write
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
+      - uses: actions/checkout@v3
+
+      - uses: pdm-project/setup-pdm@v3
         with:
-          python-version: "3.8"
-      - name: "Install dependencies"
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install nox
-          python --version
-          pip --version
-          nox --version
-      - name: "Build wheel and publish to PyPI"
-        env:
-          TWINE_USERNAME: __token__
-          TWINE_PASSWORD: ${{ secrets.pypi_token }}
-        run: |
-          nox -s publish
-      - name: Create Github release
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
-        with:
-          files: dist/*
-          token: ${{ secrets.release_token }}
+          version: head
+
+      - name: Publish package distributions to PyPI
+        run: pdm publish
+
