--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: Publish
+name: Publish to PyPI and GitHub Release
 
 on:
   # Run when a new tag has been created
@@ -24,13 +24,19 @@ jobs:
       # contents: read
       # IMPORTANT: this permission is mandatory for trusted publishing
       id-token: write
+      # Required by action-gh-release
+      contents: write
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-      - uses: pdm-project/setup-pdm@v3
-        with:
-          version: head
+      - uses: pdm-project/setup-pdm@v4
 
       - name: Publish package distributions to PyPI
         run: pdm publish
+
+      - name: Create Github release
+        uses: softprops/action-gh-release@v2
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: dist/*
 
