--- a/.github/workflows/test-suite.yml
+++ b/.github/workflows/test-suite.yml
@@ -20,17 +20,19 @@ jobs:
         python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
         os: [windows-latest, ubuntu-latest, macos-latest]
     steps:
-      - uses: "actions/checkout@v4"
-      - uses: "actions/setup-python@v5"
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-python@v5
         with:
           python-version: "${{ matrix.python-version }}"
-      - name: "Install dependencies"
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install nox
-          python --version
-          pip --version
-          nox --version
-      - name: "Run tests"
-        run: |
-          nox -s test_for_ci
+
+      - uses: pdm-project/setup-pdm@v4
+        with:
+          python-version: "${{ matrix.python-version }}"
+
+      - name: Install dependencies
+        run: pdm add -d nox
+
+      - name: Run tests
+        run: pdm run nox -s test_for_ci
+
