--- a/.github/workflows/test-suite.yml
+++ b/.github/workflows/test-suite.yml
@@ -31,7 +31,7 @@ jobs:
           python-version: "${{ matrix.python-version }}"
 
       - name: Install dependencies
-        run: pdm add -d nox
+        run: pdm add -d nox rtoml
 
       - name: Run tests
         run: pdm run nox -s test_for_ci
