--- a/.github/workflows/test-suite.yml
+++ b/.github/workflows/test-suite.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: "${{ matrix.os }}"
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13"]
         os: [windows-latest, ubuntu-latest, macos-latest]
     steps:
       - uses: actions/checkout@v4
@@ -30,8 +30,13 @@ jobs:
         with:
           python-version: "${{ matrix.python-version }}"
 
-      - name: Install dependencies
-        run: pdm add -d nox rtoml
+      - name: Install dependencies (Python < 3.11)
+        if: ${{ matrix.python-version < '3.11' }}
+        run: pdm add -d nox tomli
+
+      - name: Install dependencies (Python >= 3.11)
+        if: ${{ matrix.python-version >= '3.11' }}
+        run: pdm add -d nox
 
       - name: Run tests
         run: pdm run nox -s test_for_ci
