--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,6 +82,7 @@ warn_unused_configs = true
 [tool.pytest.ini_options]
 asyncio_mode = "strict"
 
+# use `pdm update --update-reuse` to update version specs
 [dependency-groups]
 dev = [
   "autoflake>=2.3.1",
@@ -93,7 +94,7 @@ dev = [
   "pytest-cov>=5.0.0",
   "pytest-mock>=3.14.0",
   "pytest-timeout>=2.3.1",
-  "rtoml>=0.11.0",
-  "ruff>=0.6.1",
+  "ruff>=0.9.10",
+  "tomli>=2.2.1; python_version < \"3.11\"",
   "typing-extensions>=4.12.2",
 ]
